[package]
name = "nebius"
version = "0.1.0"
edition = "2024"

[dependencies]
pbjson = "0.7.0"
pbjson-types = "0.7.0"
prost = "0.13.5"
prost-types = "0.13.5"
serde = "1.0.219"
tokio = { version = "1.45.1", features = ["full"] }
tonic = { version = "0.13.1", features = ["transport"] }

[build-dependencies]
tonic-build = "0.13.1"
glob = "0.3.1"
anyhow = "1.0.86"
prost = "0.13.5"
prost-types = "0.13.1"
